# NodeJS-Starter-V1

./: .env.example  .gitignore  CI_CD_GUIDE.md  CI_CD_IMPLEMENTATION.md  CLAUDE.local.md.template  CLAUDE.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  PRD_SYSTEM_COMPLETE.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  mcp_config.json  package.json  plan.md  pnpm-lock.yaml  turbo.json
.claude/: CLAUDE.md  (+2 more)
apps/backend/: pyproject.toml
apps/backend/src/agents/: __init__.py  base_agent.py  orchestrator.py  registry.py
apps/backend/src/agents/long_running/: __init__.py  features.py  initializer.py
apps/backend/src/agents/prd/: __init__.py  analysis_agent.py  feature_decomposer.py  prd_orchestrator.py  roadmap_planner.py  tech_spec_generator.py  test_generator.py
apps/backend/src/api/: main.py
apps/backend/src/api/middleware/: auth.py  rate_limit.py
apps/backend/src/api/routes/: agent_dashboard.py  agents.py  chat.py  health.py  prd.py  task_queue.py  webhooks.py
apps/backend/src/config/: settings.py
apps/backend/src/graphs/: __init__.py  main_graph.py
apps/backend/src/memory/: store.py
apps/backend/src/models/: anthropic.py  selector.py
apps/backend/src/skills/: __init__.py  executor.py  loader.py
apps/backend/src/state/: __init__.py  manager.py  supabase.py
apps/backend/src/tools/: __init__.py
apps/backend/src/workflows/: pr_automation.py
apps/backend/tests/: conftest.py  test_agents.py  test_prd_agents.py  test_prd_routes.py
apps/backend/tests/api/: test_agent_dashboard.py  test_task_queue.py
(+73 files in other folders)
